--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,9 @@ spring.application.name=ss_2022_c2_e1
 spring.datasource.url=jdbc:mysql://localhost:3306/ss_lesson2
 spring.datasource.username=root
 spring.datasource.password=admin
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 # makes sure that schema.sql runs ater Hibernate creates the schema
 spring.jpa.defer-datasource-initialization=true
 # ensures schema.sql runs even if you're not using an embedded DB
 spring.sql.init.mode=always
+logging.level.org.springframework.security=DEBUG
